<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vendasActivity">

    <include layout="@layout/toolbarvendas"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgProdutoVendas"
        android:layout_gravity="center"
        android:layout_marginTop="?actionBarSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTextfotoproduto"
            android:layout_gravity="center"
            android:textColor="@color/headre_color_backgroud"/>
    <ImageView
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:src="@drawable/ic_action_photo"
        android:layout_gravity="center"
        android:id="@+id/btoPhoto"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCategoria"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectCategoria"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeProduto"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNomeProduto"
        android:maxLength="99"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtQuantidade"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editQuantidae"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtValorProduto"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$"
                />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editValor"
        android:hint="Ex: R$ 35.50 use o ponto ao invés de (,)"
        android:maxLength="6"
        android:inputType="numberDecimal"/>

        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFornecedor"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="49"
        android:id="@+id/editFornecedor"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CEP:"
            android:maxLength="8"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:id="@+id/editCep"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEstado"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEstado"
        android:maxLength="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCidade"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editCidade"
        android:maxLength="100"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/barradeprogrsso"/>

        <Button
            android:id="@+id/btoGravarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GRAVAR PRODUTO"
            android:textColor="@color/colorBranco"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>